2006-01-04  Dotan Barak  <dotanb@mellanox.co.il>

	* include/infiniband/verbs.h: Fix mask names in description of
	ibv_modify_srq.

2006-01-04  Michael S. Tsirkin  <mst@mellanox.co.il>

	* src/init.c (ibverbs_init): Fix ibverbs_init for multiple adapters.
	Noted by Christoph Raisch.

2005-12-15  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/verbs.h: Document that devices must be opened
	before calling ibv_free_device_list().
	
	* src/verbs.c (ibv_create_srq): Not all provider libraries will
	support SRQs, so check if the create_srq method is defined before
	calling it.  (Based on a patch from Shirley Ma <xma@us.ibm.com>)

2005-11-11  Roland Dreier  <roland@cisco.com>

	* examples/asyncwatch.c, examples/rc_pingpong.c,
	examples/srq_pingpong.c, examples/uc_pingpong.c,
	examples/ud_pingpong.c, examples/device_list.c,
	examples/devinfo.c: Update examples to match new API.
	
	* include/infiniband/verbs.h, src/device.c, src/init.c,
	src/ibverbs.h: Change from dlist-based ibv_get_devices() API to
	simpler ibv_get_device_list() and ibv_free_device_list() API.

2005-11-10  Sean Hefty  <sean.hefty@intel.com>

	* include/infiniband/sa-kern-abi.h: New include file to contain
	definitions of SA structures passed between userspace and kernel.

	* include/infiniband/sa.h: New include file for definitions of 
	SA structures used by multiple libraries.

	* include/infiniband/marshall.h src/marshall.c: New files to define
	routines used to exchange data with kernel modules.

	* include/infiniband/kern-abi.h: Added data structures used to exchange
	QP attribute with kernel modules.

2005-11-09  Michael S. Tsirkin  <mst@mellanox.co.il>

	* src/device.c (ibv_get_devices): Make function reentrant by using
	a mutex to make sure we initialize the device list at most once.

2005-11-08  Roland Dreier  <roland@cisco.com>

	* src/cmd.c (ibv_cmd_create_qp): Add handling for new create QP
	interface, which has the kernel return QP capabilities.
