@@ -1,3 +1,9 @@
+2006-01-06  Ralph Campbell  <ralphc@pathscale.com>
+
+	* examples/rc_pingpong.c (main), examples/srq_pingpong.c (main),
+	examples/uc_pingpong.c (main), examples/ud_pingpong.c (main): Fix
+	test of return value of ibv_poll_cq().
+
 2006-01-04  Dotan Barak  <dotanb@mellanox.co.il>
 
 	* include/infiniband/verbs.h: Fix mask names in description of
